added JavaCodeGeneratorTest a few UnitTest